--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-setuptools>=65.5.1
-wheel
+
 Flask==2.3.2
 flask-cors==4.0.0
-pymongo==4.5.0
+pymongo>=4.8.0
 bcrypt==4.0.1
-reportlab==3.6.12
+reportlab>=4.2.2
 openpyxl==3.1.2
 joblib==1.3.2
-numpy==1.24.3
-scikit-learn==1.3.0
+numpy>=2.0.0
+scikit-learn>=1.5.0
 requests==2.31.0
-google-generativeai
+google-generativeai>=0.8.2
 gunicorn
