--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ reportlab>=4.2.2
 openpyxl==3.1.2
 joblib==1.3.2
 numpy>=2.0.0
-scikit-learn>=1.5.0
+scikit-learn==1.6.1
 requests==2.31.0
 google-generativeai>=0.8.2
 gunicorn
